<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home"
        android:title="@string/navigation_tab_home"
        android:icon="@drawable/baseline_home_24" />
    <item android:id="@+id/search"
        android:title="@string/navigation_tab_search"
        android:icon="@drawable/baseline_search_24" />
    <item android:id="@+id/add"
        android:title="@string/navigation_tab_new"
        android:icon="@drawable/outline_add_box_24" />
    <item android:id="@+id/reels"
        android:title="@string/navigation_tab_reels"
        android:icon="@drawable/baseline_video_library_24" />
    <item android:id="@+id/Profile"
        android:title="@string/navigation_tab_profile"
        android:icon="@drawable/baseline_person_4_24" />
</menu>