<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.UserStoryDetailActivity">

    <ImageView
        android:id="@+id/story_content_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_white"
        android:src="@drawable/baseline_person_4_24"
        android:contentDescription="@string/story_image_view_description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/stories_timing_layout"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="4dp"
            android:background="@color/black"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:id="@+id/story_user_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- Card view avec la pp -->
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp"
                    app:cardBackgroundColor="@color/grey"
                    app:cardCornerRadius="50dp">

                    <ImageView
                        android:id="@+id/story_user_profile_ic_image_view"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:contentDescription="@string/story_detail_user_profile_pic_image_view"
                        android:src="@drawable/baseline_person_4_24" />

                </androidx.cardview.widget.CardView>

                <!-- Vertical linear layout avec le username et le pseudo -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/story_user_name_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_story_user_name_text"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="10dp" />

                    <TextView
                        android:id="@+id/story_user_pseudo_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hint_sample_user_pseudo_text"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_info_card_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="10dp"
                app:cardBackgroundColor="@color/transparent_white"
                app:cardCornerRadius="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/user_story_detail_comment_text_hint"
                    android:textSize="18sp"
                    android:layout_marginStart="20dp"
                    android:textColorHint="@color/grey"
                    android:textStyle="bold"
                    android:gravity="start|center"/>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </LinearLayout>


</FrameLayout>