<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_marginHorizontal="8dp"
    android:weightSum="1"
    android:layout_marginTop="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/direct_message_user_profile_picture_card_view"
        android:layout_width="65dp"
        android:layout_height="65dp"
        app:cardCornerRadius="50dp"
        app:strokeWidth="4dp"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="4dp"
        app:strokeColor="@color/orange"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/direct_message_user_profile_pic_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent_white"
            android:src="@drawable/baseline_person_4_24"
            android:contentDescription="@string/user_profile_picture_description"/>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/conversation_last_message_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:maxLines="2"
        android:fontFamily="sans-serif-condensed-medium"
        android:ellipsize="end"
        android:textSize="16sp"
        android:layout_weight="1"
        android:text="@string/sample_text_conversation_cell_last_message"/>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardBackgroundColor="@color/orange"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="5dp">

            <TextView
                android:id="@+id/conversation_messages_count_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_sample_text_conversation_cell"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>
        </com.google.android.material.card.MaterialCardView>

</LinearLayout>